--- a/README
+++ b/README
@@ -3,4 +3,4 @@ Hi There
 This is a simple Pythagorean Theorem calculator, 
 I still need to do more work on it but for the time being it's ok
 
-Feel free to read through it and use it but please don't use for own growth
+Feel free to read through it and use it as you please
